2004-07-02 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: New file
	* cli/input.cc: init_gpsim() will now create a socket.
	Added a Socket class that is capable of creating a socket and
	accepting commands.
	* src/registers.h: added an option to fetch the RegisterValue object
	without causing a trace to be emitted.

2004-07-06 Borut Razem <borut.razem@siol.net>
	* gui/settings.h, gui/settings_exdbm.h, gui/settings_exdbm.cc,
	  gui/gui.h, plat/win32/settings_reg.h, plat/win32/settings_reg.cpp,
	  gui/gui.vcproj, gui/Makefile.am: added additional layer to hide
	  differences between eXdbm and WIN32 registry
	* store settings in registy on WIN32

2004-07-03 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.ico, plat/win32/gpsim.nsi: created NSIS setup script

2004-07-02 Scott Dattalo <scott@dattalo.com>
	* gpsim/input.cc, gui/gui_menu.cc: Now files are correctly
	loaded through the menu interface (File/Open)
	* cli/parse.yy, cli/scan.ll, cli/operator.cc, cli/operator.h:
	Added new binary operators: -,*,/,&,^,<<,>>
	
2004-07-02 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc: Emit warning if a user specifies both
	a .hex file and a .cod file at the command line.

2004-06-30 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: Added additional export definitions.
	* cli/cmd_clear.cc: type casting fixes.
	* src/breakpoints.h: added get_bp accessor function for the 
	global bp (breakpoint) object
	* src/gpsim_time.h: now uses the bp accessor function.
	* src/processor.cc: If the listing file is not present,
	gpsim will not crash now...
	
2004-06-30 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, cli/input.cc:
	Starting gpsim in cli only mode would cause a crash.
	
2004-06-30 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: small fix for MSVC compilation

2004-06-28 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/misc.h, cli/cmd_symbol.cc, src/symbol.cc:
	Removed 'NUMBER' and 'FLOATING_NUMBER' types from the CLI parser. Now